Add scrollbar to TOC

--- a/src/styles/components/_page-navigation.scss
+++ b/src/styles/components/_page-navigation.scss
@@ -7,7 +7,7 @@
   flex-wrap: wrap;
   gap: spruce.spacer(m);
   justify-content: space-between;
-  margin-block-start: spruce.spacer(l);
+  margin-block-start: spruce.spacer(xl);
   padding-block-start: spruce.spacer(m);
 }
 
