--- a/src/styles/components/_entry-content.scss
+++ b/src/styles/components/_entry-content.scss
@@ -13,4 +13,19 @@
   > * + h6 {
     margin-top: 2.25rem;
   }
+
+  .code-link {
+    text-decoration: none;
+
+    code {
+      transition: var(--#{spruce.$prefix}-transition-duration) var(--#{spruce.$prefix}-transition-timing-function);
+    }
+
+    &:hover {
+      code {
+        background-color: spruce.color(primary);
+        color: #fff;
+      }
+    }
+  }
 }
