--- a/src/styles/components/_page-navigation.scss
+++ b/src/styles/components/_page-navigation.scss
@@ -34,7 +34,7 @@
   &__icon {
     align-items: center;
     background-color: spruce.color(primary-lightest);
-    border-radius: spruce.$border-radius-lg;
+    border-radius: spruce.$btn-border-radius;
     display: flex;
     flex-shrink: 0;
     justify-content: center;
