--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -65,6 +65,10 @@ h6 {
   font-family: var(--spruce-documentation-heading-font-family);
 }
 
+.btn--rounded {
+  border-radius: 1rem;
+}
+
 .btn--install {
   @include spruce.btn-variant(install-foreground, install-background);
 }
