--- a/src/styles/components/_error-404.scss
+++ b/src/styles/components/_error-404.scss
@@ -3,7 +3,7 @@
 
 .error-404 {
   &__container {
-    @include spruce.layout-center($gutter: clamp(spruce.spacer(m), 5vw, spruce.spacer(l)));
+    @include spruce.layout-center(clamp(spruce.spacer(m), 5vw, spruce.spacer(l)));
   }
 
   &__inner {
@@ -17,7 +17,7 @@
 
   &__caption {
     @include spruce.layout-stack(spruce.spacer(s), false);
-    
+
     margin-left: auto;
     margin-right: auto;
     margin-top: spruce.spacer(m);
@@ -44,7 +44,7 @@
     margin-top: 1.5rem;
 
     > * {
-      margin: spruce.spacer(xs) 
+      margin: spruce.spacer(xs)
     }
   }
 }
