--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -4,7 +4,7 @@
   padding: spruce.spacer(xxl) 0;
 
   &__container {
-    @include spruce.layout-center($gutter: clamp(spruce.spacer(m), 5vw, spruce.spacer(l)));
+    @include spruce.layout-center(clamp(spruce.spacer(m), 5vw, spruce.spacer(l)));
   }
 
   &__top {
