--- a/src/styles/layout/_documentation.scss
+++ b/src/styles/layout/_documentation.scss
@@ -4,7 +4,7 @@
   padding: clamp(spruce.spacer(l), 5vw, spruce.spacer(xl)) 0;
 
   &__container {
-    @include spruce.layout-center($gutter: clamp(spruce.spacer(m), 5vw, spruce.spacer(l)));
+    @include spruce.layout-center(clamp(spruce.spacer(m), 5vw, spruce.spacer(l)));
   }
 
   &__inner {
