--- a/src/styles/layout/_page.scss
+++ b/src/styles/layout/_page.scss
@@ -5,8 +5,8 @@
 
   &__container {
     @include spruce.layout-center(
-      $gutter: clamp(spruce.spacer(m), 5vw, spruce.spacer(l)),
-      $max-width: 50rem
+      clamp(spruce.spacer(m), 5vw, spruce.spacer(l)),
+      50rem
     );
   }
 
