Update Spruce to v0.4.1

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,52 +1,12 @@
-@use 'sass:color';
+// Load Spruce CSS
+@forward 'config';
+@forward 'styles';
 
-$primary-lightest: hsl(259, 53%, 94%);
+// Load components
+@forward 'component';
+@forward 'layout';
 
-@use '~sprucecss/scss/spruce' with (
-  $colors: (
-    base: (
-      primary-lightest: $primary-lightest,
-      primary-darkest: hsl(272, 100%, 9%),
-      heading: hsl(271deg, 100%, 9%)
-    ),
-    btn: (
-      install-background: hsl(0, 0%, 95%),
-      install-background-hover: hsl(0, 0%, 90%),
-      install-foreground: hsl(0, 0%, 10%),
-      install-foreground-hover: hsl(0, 0%, 10%),
-      decline-background: hsl(207, 39%, 17%),
-      decline-background-hover: hsl(207, 23%, 26%),
-      decline-foreground: hsl(0, 0%, 100%),
-      decline-foreground-hover: hsl(0, 0%, 100%),
-    ),
-    cookie: (
-      background: hsl(207deg 95% 8%),
-      foreground: hsl(0 0% 100%),
-    )
-  ),
-  $font-size-base: 1.063rem,
-  $font-size-ratio: 1.250,
-  $container-width: 86rem,
-  $form-control-font-size: 1rem
-);
-
-@forward 'components/code-block';
-@forward 'components/docs-cards';
-@forward 'components/error-404';
-@forward 'components/footer';
-@forward 'components/header';
-@forward 'components/hero';
-@forward 'components/notification';
-@forward 'components/preview';
-@forward 'components/sidebar';
-@forward 'components/skip-link';
-@forward 'components/table-of-content';
-@forward 'components/cookie-consent';
-@forward 'components/entry-content';
-@forward 'components/page-navigation';
-
-@forward 'layout/documentation';
-@forward 'layout/page';
+@use '~sprucecss/scss/spruce';
 
 body {
   --spruce-documentation-heading-font-family: 'Poppins', sans-serif;
