--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -1,4 +1,19 @@
+@use 'sass:color';
+
 $primary-lightest: hsl(259, 53%, 94%);
+
+// Dark Colors
+$dark-color-primary: hsl(261 54% 70%);
+$dark-color-secondary: hsl(227 92% 55%);
+
+$dark-color-black: hsl(205 100% 2%);
+$dark-color-white: hsl(0 0% 100%);
+
+$dark-color-gray-light: hsl(0 0% 100%);
+$dark-color-gray: hsl(0 0% 97%);
+
+$dark-color-danger: hsl(0 71% 51%);
+$dark-color-success: hsl(150 100% 33%);
 
 @use '~sprucecss/scss/spruce' with (
   $colors: (
@@ -20,6 +35,70 @@ $primary-lightest: hsl(259, 53%, 94%);
     cookie: (
       background: hsl(207deg 95% 8%),
       foreground: hsl(0 0% 100%),
+    )
+  ),
+  $dark-colors: (
+    base: (
+      primary: $dark-color-primary,
+      secondary: $dark-color-secondary,
+      // background: hsl(270 100% 3%),
+      background: hsl(206 88% 6%),
+      // heading: hsl(266 68% 90%),
+      heading: hsl(0 0% 100%),
+      text: $dark-color-gray,
+      link: $dark-color-primary,
+      link-hover: color.scale($dark-color-primary, $lightness: -20%),
+      border: $dark-color-gray-light,
+      mark-background: hsl(50 100% 80%),
+      mark-foreground: $dark-color-black,
+      code-background: hsl(261 52% 95%),
+      code-foreground: $dark-color-black,
+      blockquote-border: $dark-color-primary
+    ),
+    selection: (
+      foreground: $dark-color-white,
+      background: $dark-color-primary
+    ),
+    alert: (
+      danger: $dark-color-danger,
+      info: hsl(195 100% 42%),
+      success: $dark-color-success,
+      warning: hsl(48 89% 55%)
+    ),
+    btn: (
+      primary-background: $dark-color-primary,
+      primary-foreground: $dark-color-white,
+      primary-shadow-focus: color.adjust($dark-color-primary, $alpha: -0.75),
+      secondary-background: $dark-color-secondary,
+      secondary-foreground: $dark-color-white,
+      secondary-shadow-focus: color.adjust($dark-color-secondary, $alpha: -0.75)
+    ),
+    form: (
+      background: $dark-color-white,
+      background-disabled: hsl(0 0% 95%),
+      border: $dark-color-gray-light,
+      border-disabled: $dark-color-gray-light,
+      border-focus: $dark-color-primary,
+      shadow-focus: color.adjust($dark-color-primary, $alpha: -0.75),
+      check-foreground: $dark-color-white,
+      check-background: $dark-color-primary,
+      invalid: $dark-color-danger,
+      invalid-shadow: color.adjust($dark-color-danger, $alpha: -0.75),
+      label: $dark-color-black,
+      legend: $dark-color-black,
+      placeholder: hsl(208 7% 40%),
+      text: $dark-color-gray,
+      select-foreground: $dark-color-primary,
+      valid: $dark-color-success,
+      valid-shadow: color.adjust($dark-color-success, $alpha: -0.75)
+    ),
+    table: (
+      border: $dark-color-gray-light,
+      caption: $dark-color-gray,
+      heading: $dark-color-black,
+      hover: hsl(0 0% 0% / 0.05),
+      text: $dark-color-gray,
+      stripe: hsl(0 0% 0% / 0.025)
     )
   ),
   $font-size-base: 1.063rem,
