--- a/src/styles/component/_docs-cards.scss
+++ b/src/styles/component/_docs-cards.scss
@@ -15,7 +15,7 @@
 .docs-card {
   $this: &;
 
-  background-color: #fff;
+  background-color: spruce.color(background);
   border: 2px solid black;
   border-radius: 1.25rem;
   display: flex;
