--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -6,11 +6,11 @@ $primary-lightest: hsl(259, 53%, 94%);
 $dark-color-primary: hsl(261 54% 70%);
 $dark-color-secondary: hsl(227 92% 55%);
 
-$dark-color-black: hsl(205 100% 2%);
-$dark-color-white: hsl(0 0% 100%);
+$dark-color-black: hsl(206 88% 6%);
+$dark-color-white: hsl(0 0% 95%);
 
-$dark-color-gray-light: hsl(0 0% 100% / 8%);
 $dark-color-gray: hsl(0 0% 97%);
+$dark-color-gray-dark: hsl(0 0% 100% / 8%);
 
 $dark-color-danger: hsl(0 71% 51%);
 $dark-color-success: hsl(150 100% 33%);
@@ -44,18 +44,16 @@ $dark-color-success: hsl(150 100% 33%);
     base: (
       primary: $dark-color-primary,
       secondary: $dark-color-secondary,
-      // background: hsl(270 100% 3%),
-      background: hsl(206 88% 6%),
-      // heading: hsl(266 68% 90%),
-      heading: hsl(0 0% 100%),
+      background: $dark-color-black,
+      heading: $dark-color-white,
       text: $dark-color-gray,
       link: $dark-color-primary,
       link-hover: color.scale($dark-color-primary, $lightness: -20%),
-      border: $dark-color-gray-light,
+      border: $dark-color-gray-dark,
       mark-background: hsl(50 100% 80%),
       mark-foreground: $dark-color-black,
-      code-background: hsl(261 52% 95%),
-      code-foreground: $dark-color-black,
+      code-background: hsl(207deg 64% 21%),
+      code-foreground: $dark-color-white,
       blockquote-border: $dark-color-primary
     ),
     selection: (
@@ -63,36 +61,40 @@ $dark-color-success: hsl(150 100% 33%);
       background: $dark-color-primary
     ),
     btn: (
-      primary-background: $dark-color-primary,
+      primary-background: hsl(261 52% 59%),
       primary-foreground: $dark-color-white,
-      primary-shadow-focus: color.adjust($dark-color-primary, $alpha: -0.75),
+      primary-shadow-focus: color.adjust(hsl(261 52% 59%), $alpha: -0.75),
       secondary-background: $dark-color-secondary,
       secondary-foreground: $dark-color-white,
-      secondary-shadow-focus: color.adjust($dark-color-secondary, $alpha: -0.75)
+      secondary-shadow-focus: color.adjust($dark-color-secondary, $alpha: -0.75),
+      install-background: hsl(207, 39%, 17%),
+      install-background-hover: hsl(207, 23%, 26%),
+      install-foreground: hsl(0, 0%, 100%),
+      install-foreground-hover: hsl(0, 0%, 100%),
     ),
     form: (
-      background: $dark-color-white,
-      background-disabled: hsl(0 0% 95%),
-      border: $dark-color-gray-light,
-      border-disabled: $dark-color-gray-light,
+      background: color.scale($dark-color-black, $lightness: 5%),
+      background-disabled: $dark-color-black,
+      border: $dark-color-gray-dark,
+      border-disabled: $dark-color-gray-dark,
       border-focus: $dark-color-primary,
       shadow-focus: color.adjust($dark-color-primary, $alpha: -0.75),
-      check-foreground: $dark-color-white,
+      check-foreground: $dark-color-black,
       check-background: $dark-color-primary,
       invalid: $dark-color-danger,
       invalid-shadow: color.adjust($dark-color-danger, $alpha: -0.75),
-      label: $dark-color-black,
-      legend: $dark-color-black,
-      placeholder: hsl(208 7% 40%),
+      label: $dark-color-white,
+      legend: $dark-color-white,
+      placeholder: hsl(0 0% 60%),
       text: $dark-color-gray,
       select-foreground: $dark-color-primary,
       valid: $dark-color-success,
       valid-shadow: color.adjust($dark-color-success, $alpha: -0.75)
     ),
     table: (
-      border: $dark-color-gray-light,
+      border: $dark-color-gray-dark,
       caption: $dark-color-gray,
-      heading: $dark-color-black,
+      heading: $dark-color-white,
       hover: hsl(0 0% 0% / 0.05),
       text: $dark-color-gray,
       stripe: hsl(0 0% 0% / 0.025)
