--- a/src/styles/component/_preview.scss
+++ b/src/styles/component/_preview.scss
@@ -2,7 +2,7 @@
 
 .preview {
   @include spruce.layout-stack(spruce.spacer(m));
-  border: 1px solid rgba(0, 0, 0, 0.075);
+  border: 1px solid spruce.color(border);
   border-radius: spruce.$border-radius-sm;
   font-size: 1rem;
   padding: spruce.spacer(m);
