--- a/src/styles/component/_table-of-content.scss
+++ b/src/styles/component/_table-of-content.scss
@@ -6,7 +6,12 @@
   top: 2rem;
 
   @include spruce.breakpoint(lg) {
-    @include spruce.scrollbar($size: 0.3rem);
+    @include spruce.scrollbar(
+      spruce.color(thumb-background, scrollbar),
+      spruce.color(thumb-background-hover, scrollbar),
+      spruce.color(track-background, scrollbar),
+      0.3rem
+    );
     overflow-x: hidden;
     overflow-y: auto;
     max-height: calc(100vh - 4rem);
