--- a/src/styles/layout/_example.scss
+++ b/src/styles/layout/_example.scss
@@ -1,25 +1,12 @@
 @use '~sprucecss/scss/spruce';
 
 .layout-example {
-  padding: clamp(spruce.spacer(l), 5vw, spruce.spacer(xl)) 0;
+  padding-block: 0 clamp(spruce.spacer(l), 5vw, spruce.spacer(xl));
 
   &__container {
     @include spruce.layout-center(
       clamp(spruce.spacer(m), 5vw, spruce.spacer(l))
     );
-  }
-
-  &__title {
-    font-size: spruce.responsive-font-size(
-      $size: 3.3rem,
-      $scaler: 40,
-      $optimal-size: '3vw + 1rem'
-    );
-    margin: 0;
-  }
-
-  &__meta {
-    margin-top: spruce.spacer(xs);
   }
 }
 
