--- a/src/styles/component/_page-heading.scss
+++ b/src/styles/component/_page-heading.scss
@@ -1,18 +1,15 @@
 @use '~sprucecss/scss/spruce';
 
 .page-heading {
-  --gap: spruce.spacer(m);
-
   align-items: center;
   display: grid;
   gap: spruce.spacer(s);
   grid-template-columns: minmax(0, 1fr);
   justify-content: center;
-  padding: clamp(spruce.spacer(l), 10vh, 6rem) 0;
+  padding-block: clamp(spruce.spacer(l), 10vh, 7rem);
   text-align: center;
 
   @include spruce.breakpoint(md) {
-    --gap: spruce.spacer(l);
     grid-template-columns: minmax(0, 1fr) minmax(0, 1.5fr);
     justify-content: start;
     text-align: start;
@@ -28,6 +25,16 @@
     line-height: 1;
     margin-block: 0;
     max-width: 50ch;
+  }
+
+  &__caption {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+
+    @include spruce.breakpoint(md) {
+      align-items: start;
+    }
   }
 
   &__description {
