--- a/src/styles/component/_page-heading.scss
+++ b/src/styles/component/_page-heading.scss
@@ -25,6 +25,10 @@
     line-height: 1;
     margin-block: 0;
     max-width: 50ch;
+
+    .highlighted {
+      color: spruce.color(primary);
+    }
   }
 
   &__caption {
