--- a/src/styles/layout/_documentation.scss
+++ b/src/styles/layout/_documentation.scss
@@ -17,17 +17,20 @@
     }
   }
 
+  &__body-helper {
+    order: -1;
+
+    @include spruce.breakpoint(sm) {
+      order: 2;
+    }
+  }
+
   &__body {
     display: grid;
     column-gap: spruce.spacer(l);
     grid-auto-rows: min-content;
     grid-template-columns: minmax(0, 1fr);
     row-gap: spruce.spacer(m);
-    order: -1;
-
-    @include spruce.breakpoint(sm) {
-      order: 2;
-    }
 
     @include spruce.breakpoint(lg) {
       grid-template-columns: minmax(0, 3.5fr) minmax(0, 15rem);
