Change <ul> to <ol>

--- a/src/styles/component/_table-of-content.scss
+++ b/src/styles/component/_table-of-content.scss
@@ -24,7 +24,7 @@
   &__navigation {
     margin: 1rem 0 0;
 
-    ul {
+    ol {
       @include spruce.layout-stack(spruce.spacer(xs));
 
       list-style: none;
