Change end to flex-end and start to flex-start at flex properties

--- a/src/styles/component/_hero.scss
+++ b/src/styles/component/_hero.scss
@@ -19,7 +19,7 @@
     @include spruce.breakpoint(md) {
       --gap: 4rem;
       grid-template-columns: minmax(0, 1.25fr) minmax(0, 1fr);
-      justify-content: start;
+      justify-content: flex-start;
       text-align: start;
     }
   }
@@ -42,7 +42,7 @@
     flex-direction: column;
 
     @include spruce.breakpoint(md) {
-      align-items: start;
+      align-items: flex-start;
     }
   }
 
