--- a/src/styles/component/_header.scss
+++ b/src/styles/component/_header.scss
@@ -75,7 +75,7 @@
     display: flex;
     flex-grow: 1;
     font-family: spruce.$font-family-heading;
-    justify-content: end;
+    justify-content: flex-end;
 
     ul {
       background-color: spruce.color(background);
