--- a/static/examples/assets/scss/page/auth/_sidebar.scss
+++ b/static/examples/assets/scss/page/auth/_sidebar.scss
@@ -2,7 +2,7 @@
 @use 'sprucecss/scss/spruce';
 
 .auth-sidebar {
-  align-items: flex-start;
+  align-items: start;
   color: hsl(0 0% 100%);
   display: flex;
   flex-direction: column;
@@ -25,7 +25,7 @@
   }
 
   &__footer {
-    align-items: flex-start;
+    align-items: start;
     display: flex;
     flex-direction: column;
     gap: spruce.spacer(s);
