Add article example

--- a/static/examples/assets/scss/_config.scss
+++ b/static/examples/assets/scss/_config.scss
@@ -16,6 +16,9 @@ $dark-color-danger: hsl(0 71% 51%);
 $dark-color-success: hsl(150 100% 33%);
 
 @use 'sprucecss/scss/spruce' with (
+  $settings: (
+    utilities: true
+  ),
   $color-primary: $color-primary,
   $color-secondary: hsl(214 98% 25%),
   $colors: (
@@ -38,11 +41,6 @@ $dark-color-success: hsl(150 100% 33%);
     ),
     breadcrumb: (
       arrow: hsl(0 0% 0% / 0.1)
-    ),
-    sidebar: (
-      border: hsl(214 100% 90%),
-      icon: hsl(245 37% 83%),
-      active: $color-primary-light
     )
   ),
   $dark-colors: (
@@ -107,14 +105,17 @@ $dark-color-success: hsl(150 100% 33%);
       border: $dark-color-gray-dark,
       caption: $dark-color-gray,
       heading: $dark-color-white,
-      hover: hsl(0 0% 0% / 0.05),
+      hover: hsl(0 0% 100% / 0.05),
       text: $dark-color-gray,
-      stripe: hsl(0 0% 0% / 0.025)
+      stripe: hsl(0 0% 100% / 0.025)
     ),
     scrollbar: (
       thumb-background: hsla(0, 0%, 100%, 0.15),
       thumb-background-hover: hsla(0, 0%, 100%, 0.25),
       track-background: hsla(0, 0%, 100%, 0.05)
+    ),
+    breadcrumb: (
+      arrow: hsl(0 0% 100% / 0.1)
     )
   ),
   $spacers: (
