--- a/src/styles/layout/_example.scss
+++ b/src/styles/layout/_example.scss
@@ -35,9 +35,17 @@
     transition-timing-function: spruce.transition(timing-function);
   }
 
+  &__caption {
+    margin-block-start: spruce.spacer(m);
+  }
+
   &__title {
     font-size: spruce.font-size(h3);
-    margin-block: spruce.spacer(m) 0;
+    margin-block: 0;
+
+    a {
+      color: spruce.color(heading);
+    }
   }
 
   &__description {
