--- a/src/styles/layout/_blog.scss
+++ b/src/styles/layout/_blog.scss
@@ -3,30 +3,27 @@
 .layout-blog {
   padding-block: 0 clamp(spruce.spacer(l), 5vw, spruce.spacer(xl));
 
-  &__container {
-    @include spruce.layout-center(
-      clamp(spruce.spacer(m), 5vw, spruce.spacer(l))
-    );
-  }
-
   &__inner {
     display: grid;
-    grid-template-columns: minmax(0, 1fr) minmax(0, 2fr);
+    gap: spruce.spacer(l);
+    grid-template-columns: repeat(3, minmax(0, 2fr));
   }
 }
 
-.blog-item {
+.blog-card {
   &__link {
     display: block;
     text-decoration: none;
   }
 
   &__thumbnail {
-    border: 1px solid spruce.color(border);
     border-radius: spruce.$border-radius-lg;
-    transition-duration: spruce.transition(duration);
-    transition-property: transform;
-    transition-timing-function: spruce.transition(timing-function);
+  }
+
+  &__meta {
+    display: flex;
+    column-gap: spruce.spacer(m);
+    row-gap: spruce.spacer(xs);
   }
 
   &__caption {
@@ -40,14 +37,5 @@
     a {
       color: spruce.color(heading);
     }
-  }
-
-  &__description {
-    color: spruce.color(text);
-    margin-block: spruce.spacer(xs) spruce.spacer(xxs);
-  }
-
-  &__links {
-    @include spruce.clear-list;
   }
 }
