--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -43,6 +43,9 @@ $dark-color-success: hsl(150 100% 33%);
       thumb-background: hsla(0, 0%, 0%, 0.15),
       thumb-background-hover:	hsla(0, 0%, 0%, 0.25),
       track-background:	hsla(0, 0%, 0%, 0.05)
+    ),
+    breadcrumb: (
+      arrow: hsl(0 0% 0% / 0.1)
     )
   ),
   $dark-colors: (
@@ -111,6 +114,9 @@ $dark-color-success: hsl(150 100% 33%);
       thumb-background: hsla(0, 0%, 100%, 0.15),
       thumb-background-hover:	hsla(0, 0%, 100%, 0.25),
       track-background:	hsla(0, 0%, 100%, 0.05)
+    ),
+    breadcrumb: (
+      arrow: hsl(0 0% 100% / 0.1)
     )
   ),
   $font-size-base: 1.063rem,
