--- a/src/styles/page/article/_post-content.scss
+++ b/src/styles/page/article/_post-content.scss
@@ -2,12 +2,12 @@
 
 .post-content {
   @include spruce.layout-stack;
-  font-size: 1.0375rem;
+  font-size: 1.1rem;
 
-  :is(dd, dl, dl, h1, h2, h3, h4, h5, h6, hr, ul, ol, p, blockquote, .prism-code-wrapper) {
+  :is(dd, dl, dl, h1, h2, h3, h4, h5, h6, hr, ul, ol, p, blockquote) {
     @include spruce.layout-center(
       null,
-      50rem
+      45rem
     );
   }
 
