Blog, color highlighting

--- a/src/styles/component/_code-block.scss
+++ b/src/styles/component/_code-block.scss
@@ -24,7 +24,7 @@
     color: #fff;
     display: inline-block;
     font-family: var(--spruce-documentation-heading-font-family);
-    font-size: spruce.$font-size-sm;
+    font-size: 0.8rem;
     font-weight: 500;
     left: spruce.spacer(m);
     line-height: 1;
