--- a/src/styles/component/_notification.scss
+++ b/src/styles/component/_notification.scss
@@ -7,6 +7,7 @@
   display: flex;
   font-size: 1rem;
   padding: spruce.spacer(s) calc(spruce.spacer(s) + 0.5rem);
+  position: relative;
 
   code,
   kbd,
@@ -60,10 +61,13 @@
   }
 
   &__icon {
-    flex-shrink: 0;
-    height: 1.25rem;
-    margin-inline-end: 0.5rem;
-    margin-top: 0.2rem;
-    width: 1.25rem;
+    background-color: spruce.color(background);
+    border: 4px solid spruce.color(background);
+    border-radius: 1rem;
+    height: 2rem;
+    position: absolute;
+    right: -1rem;
+    top: calc(-1rem - 4px);
+    width: 2rem;
   }
 }
