Remove copy button from code-block

--- a/src/styles/component/_code-block.scss
+++ b/src/styles/component/_code-block.scss
@@ -26,37 +26,12 @@
     font-family: var(--spruce-documentation-heading-font-family);
     font-size: 0.8rem;
     font-weight: 500;
-    left: spruce.spacer(m);
+    right: spruce.spacer(m);
     line-height: 1;
     padding: 0.4em 0.6em;
     position: absolute;
     text-transform: uppercase;
     top: 0;
-  }
-
-  &__copy-btn {
-    align-items: center;
-    background-color: spruce.color(primary);
-    border-radius: spruce.$border-radius-sm;
-    display: flex;
-    font-size: 1rem;
-    height: 1.75rem;
-    justify-content: center;
-    inset: 0.5rem 0.5rem auto auto;
-    opacity: 0;
-    padding: 0;
-    position: absolute;
-    width: 1.75rem;
-
-    &:hover {
-      background-color: color.scale(spruce.color(primary, $only-color: true), $lightness: -10%);
-    }
-
-    svg {
-      color: #fff;
-      height: 0.85rem;
-      width: 0.85rem;
-    }
   }
 
   > code {
