--- a/src/styles/layout/_documentation.scss
+++ b/src/styles/layout/_documentation.scss
@@ -1,7 +1,7 @@
 @use '~sprucecss/scss/spruce';
 
 .layout-documentation {
-  padding: clamp(spruce.spacer(l), 5vw, spruce.spacer(xl)) 0;
+  padding: clamp(spruce.spacer(m), 5vw, spruce.spacer(l)) 0;
 
   &__container {
     @include spruce.layout-center(clamp(spruce.spacer(m), 5vw, spruce.spacer(l)));
@@ -9,7 +9,7 @@
 
   &__inner {
     display: grid;
-    gap: spruce.spacer(l);
+    gap: spruce.spacer(xl);
     grid-template-columns: minmax(0, 1fr);
 
     @include spruce.breakpoint(sm) {
@@ -27,7 +27,7 @@
 
   &__body {
     display: grid;
-    column-gap: spruce.spacer(l);
+    column-gap: spruce.spacer(xl);
     grid-auto-rows: min-content;
     grid-template-columns: minmax(0, 1fr);
     row-gap: spruce.spacer(m);
