--- a/src/styles/layout/_documentation.scss
+++ b/src/styles/layout/_documentation.scss
@@ -1,7 +1,7 @@
 @use '~sprucecss/scss/spruce';
 
 .layout-documentation {
-  padding: clamp(spruce.spacer(m), 5vw, spruce.spacer(l)) 0;
+  padding: clamp(spruce.spacer(l), 5vw, spruce.spacer(xl)) 0;
 
   &__container {
     @include spruce.layout-center(clamp(spruce.spacer(m), 5vw, spruce.spacer(l)));
@@ -38,6 +38,8 @@
   }
 
   &__table-of-content {
+    font-size: 1rem;
+
     @include spruce.breakpoint(lg) {
       grid-column: 2 / 3;
       order: 2;
