--- a/src/styles/page/article/_post-heading.scss
+++ b/src/styles/page/article/_post-heading.scss
@@ -57,6 +57,6 @@
     @include spruce.text-ellipsis(1);
     display: inline-flex;
     text-align: start;
-    width: 20ch;
+    max-width: 20ch;
   }
 }
