--- a/static/examples/assets/scss/page/article/_post-heading.scss
+++ b/static/examples/assets/scss/page/article/_post-heading.scss
@@ -57,6 +57,6 @@
     @include spruce.text-ellipsis(1);
     display: inline-flex;
     text-align: start;
-    max-width: 20ch;
+    width: 20ch;
   }
 }
