Simplify color block themes

--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -19,6 +19,7 @@ $dark-color-success: hsl(150 100% 33%);
   $colors: (
     base: (
       primary-lightest: $primary-lightest,
+      primary-dark: hsl(261deg 52% 35%),
       primary-darkest: hsl(272, 100%, 9%),
       heading: hsl(271, 100%, 9%)
     ),
