--- a/src/styles/layout/_documentation.scss
+++ b/src/styles/layout/_documentation.scss
@@ -1,7 +1,7 @@
 @use '~sprucecss/scss/spruce';
 
 .layout-documentation {
-  padding: clamp(spruce.spacer(l), 5vw, spruce.spacer(xl)) 0;
+  padding-block: clamp(spruce.spacer(m), 5vw, spruce.spacer(l)) clamp(spruce.spacer(l), 5vw, spruce.spacer(xl));
 
   &__container {
     @include spruce.layout-center(clamp(spruce.spacer(m), 5vw, spruce.spacer(l)));
