--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,7 @@
 // Load components
 @forward 'component';
 @forward 'layout';
+@forward 'prism';
 @forward 'page/article';
 
 @use '~sprucecss/scss/spruce';
