--- a/src/styles/component/_notification.scss
+++ b/src/styles/component/_notification.scss
@@ -60,6 +60,10 @@
     }
   }
 
+  &__content {
+    margin-block: 0;
+  }
+
   &__icon {
     background-color: spruce.color(background);
     border: 4px solid spruce.color(background);
