--- a/src/styles/component/_sidebar.scss
+++ b/src/styles/component/_sidebar.scss
@@ -2,12 +2,19 @@
 @use '../mixin';
 
 .sidebar {
-  position: relative;
+  @include spruce.scrollbar(
+    spruce.color(thumb-background, scrollbar),
+    spruce.color(thumb-background-hover, scrollbar),
+    spruce.color(track-background, scrollbar),
+    0.5rem
+  );
+  padding-inline-end: spruce.spacer(m);
+  position: sticky;
+  top: 2rem;
 
-  @include spruce.breakpoint(sm) {
-    border-inline-end: 1px solid spruce.color(border);
-    padding-inline-end: spruce.spacer(m);
-  }
+  overflow-x: hidden;
+  overflow-y: auto;
+  max-height: calc(100vh - 4rem);
 
   > * + * {
     margin-top: 3rem;
@@ -20,8 +27,10 @@
   }
 
   &__navigation {
+    border-left: 1px solid spruce.color(border);
     font-size: 1rem;
     margin: 1rem 0 0;
+    padding-inline-start: 1rem;
 
     ul {
       list-style: none;
