--- a/src/styles/component/_sidebar.scss
+++ b/src/styles/component/_sidebar.scss
@@ -6,7 +6,8 @@
     spruce.color(thumb-background, scrollbar),
     spruce.color(thumb-background-hover, scrollbar),
     spruce.color(track-background, scrollbar),
-    0.5rem
+    0.5rem,
+    0.15rem
   );
   padding-inline-end: spruce.spacer(m);
   position: sticky;
