--- a/src/styles/component/_hero.scss
+++ b/src/styles/component/_hero.scss
@@ -13,9 +13,9 @@
     gap: var(--gap);
     grid-template-columns: minmax(0, 1fr);
     justify-content: center;
-    padding: clamp(spruce.spacer(xl), 10vh, 7rem) 0;
+    padding: clamp(spruce.spacer(xxl), 15vh, 8rem) 0;
     text-align: center;
-/*
+    /*
     @include spruce.breakpoint(md) {
       --gap: 4rem;
       grid-template-columns: minmax(0, 1.25fr) minmax(0, 1fr);
