--- a/src/styles/component/_footer.scss
+++ b/src/styles/component/_footer.scss
@@ -1,6 +1,7 @@
 @use '~sprucecss/scss/spruce';
 
 .footer {
+  border-block-start: 1px solid spruce.color(border);
   padding: spruce.spacer(xxl) 0;
 
   &__container {
