--- a/src/styles/component/_docs-cards.scss
+++ b/src/styles/component/_docs-cards.scss
@@ -16,7 +16,7 @@
   $this: &;
 
   background-color: spruce.color(background);
-  border: 1px solid spruce.color(border);
+  border: 1px solid #d4dbe9;
   border-radius: 1.25rem;
   display: flex;
   flex-direction: column;
