--- a/src/styles/component/_getting-started.scss
+++ b/src/styles/component/_getting-started.scss
@@ -6,7 +6,7 @@
   &__inner {
     background-color: #EDE8F8;
     background-color: #f1f8ff;
-    background-color: #eff4fd;
+    background-color: spruce.color(getting-started);
     border-radius: 2rem;
     padding: spruce.spacer(l);
 
