--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,6 +12,7 @@
 @use '~sprucecss/scss/spruce';
 
 body {
+  // --spruce-documentation-heading-font-family: 'Manrope', sans-serif;
   --spruce-documentation-heading-font-family: 'Sora', sans-serif;
   --spruce-documentation-body-font-family: 'Open Sans', sans-serif;
 
